--- a/src/components/Breadcrumb/BreadcrumbComponent.css
+++ b/src/components/Breadcrumb/BreadcrumbComponent.css
@@ -1,14 +1,6 @@
 .App-BreadcrumbComponent{
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 200px;
-    bottom: 0%;
     background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     height: 200px;
-}
-
-.App-Links-BreadcrumbComponent{
-    color: black;
+    padding-top: 40px;
 }
